# Spider

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  C  CMakeCache.txt  CMakeLists.txt  README.md  Spider.sln  Spider_Blocks.mdj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client.cpp  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  doxygen.config  installer.xml  server.cpp
Conception/: MVC.txt  Spider_Blocks.mdj  dataHandler.mdj  fileHandler.mdj  keylogger.mdj  server.mdj
Debug/: InfoClient.exp  InfoClient.ilk  InfoClient.lib
RFC/: SpiderRFC2016.txt
Release/Release/: Product.wxs  Release.wax  Release.wixproj
Tests/client/: client  client.cpp  compil.sh  error.compil
Tests/keylogger_dll/generated_code/keylogger_model/: AEvent.cpp  AEvent.h  AHook {abstract}.cpp  AHook {abstract}.h  AHook.cpp  AHook.h  CWKeylogger.h  Context.h  EventFactory.cpp  EventFactory.h  EventManager.cpp  EventManager.h  HookHandler.cpp  HookHandler.h  HookObserver.cpp  HookObserver.h  KeyboardEvent.cpp  KeyboardEvent.h  KeyboardHook.cpp  KeyboardHook.h  Keylogger.cpp  Keylogger.h  KeyloggerDLL.h  MouseEvent.cpp  MouseEvent.h  MouseHook.cpp  MouseHook.h  main.cpp
Tests/keylogger_dll/keylogger_test/: keylogger_test.VC.VC.opendb  keylogger_test.sln
Tests/keylogger_dll/keylogger_test/keylogger_test/: keylogger_test.vcxproj  keylogger_test.vcxproj.filters
Tests/server/: certificatGenerator.sh  compil.sh  error.compil  server  server.cpp
Tests/server/cert/: server.crt  server.csr  server.key  server.pem
Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Win32/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sayHello.sln
cmake/headers/: hello.h
cmake/srcs/: hello.cpp  main.cpp
controller/clientController/: WorkQueue.cpp  clientController.cpp
controller/dbserv/: DB_SQLite.cpp  DB_SQLite.hpp
controller/serverController/: serverController.cpp
datahandler/: DataHandler.hpp
datahandler/MSGQTemplate/: MSGQTemplate.sln
datahandler/MSGQTemplate/MSGQTemplate/: MSGQTemplate.cpp  MSGQTemplate.vcxproj  MSGQTemplate.vcxproj.filters  ReadMe.txt  stdafx.cpp
datahandler/TestInfoClient/Debug/: TestInfoClient.ilk
datahandler/TestInfoClient/TestInfoClient/: ReadMe.txt  TestInfoClient.cpp  stdafx.cpp
datahandler/TestInfoClient/TestInfoClient/Debug/: vc140.idb
doc/: MVC.txt  Spider_Blocks.mdj  fileHandler.mdj  keylogger.mdj
include/: ASocket.h  CUDLibrary.h  CUSocket.h  CWDLibrary.h  CWSocket.h  DLDictionary.h  DLibrary.h  IInfoClient.h  IKeylogger.h  ISocket.h  WorkQueue.h  client.h  network.h  sayHello.h  server.h
include/DLLoader/: DLibrary.h
include/dataHandler/: CUFileHandler.h  CWFileHandler.h  Serializer.h
include/datahandler/: AFile.h  CUFile.h  CWFile.h  DataHandler.h  DataModel.h  FileHandler.h  IFile.h  ISerializer.h  XMLSerializer.h
include/keylogger_dll/: AEvent.h  AHook.h  AHookObserver.h  Analyser.h  Context.h  EventFactory.h  EventManager.h  HookHandler.h  HookObserver.h  IAnalyser.h  IHook.h  IHookObserver.h  IKeylogger.h  KeyboardEvent.h  KeyboardHook.h  KeyboardHookObserver.h  Keylogger.h  KeyloggerDLL.h  MouseEvent.h  MouseHook.h  MouseHookObserver.h
include/network/: ASocket.h  CUSocket.h  ISocket.h
include/workQueueManager/: CUMutex.h  CWMutex.h  workQueue.h  workQueueManager.h
launcher/: client.cpp
model/: CMakeLists.txt  DLLoader.vcxproj  DLLoader.vcxproj.filters  Documents - Raccourci.lnk  cmake_install.cmake  dataHandler.vcxproj  dataHandler.vcxproj.filters  infoClient.vcxproj  infoClient.vcxproj.filters  keylogger_dll.vcxproj  keylogger_dll.vcxproj.filters  sayHello.vcxproj  sayHello.vcxproj.filters  workQueueManager.vcxproj  workQueueManager.vcxproj.filters
model/DLLoader/: CUDLibrary.cpp  CWDLibrary.cpp  DLibrary.cpp
model/dataHandler/: CUFileHandler.cpp  CWFileHandler.cpp
model/datahandler/: AFile.cpp  CUFile.cpp  CWFile.cpp  DataHandler.cpp  DataHandler.hpp  DataModelFactory.cpp  FileHandler.cpp  IFile.cpp  Tester.cpp  XMLSerializer.cpp  main.cpp
model/datahandler/FileManager DLL/: AFile.cpp  AFile.h  CWFile.cpp  CWFile.h  DataHandler.cpp  DataHandler.h  DataModel.cpp  DataModelFactory.cpp  DataModelFactory.h  DataModelHandler.cpp  DataModelHandler.h  FileHandler.cpp  FileHandler.h  FileManager.cpp  FileManager.h  ISerializer.h  XMLSerializer.cpp  XMLSerializer.h
model/dbserv/: DB_SQLite.cpp  DB_SQLite.hpp  ISQL.h
model/infoClient/: InfoClient.cpp  InfoClient.hpp
model/keylogger_dll/: AEvent.cpp  AHook.cpp  AHookObserver.cpp  Analyser.cpp  CWKeylogger.cpp  EventFactory.cpp  EventManager.cpp  HookHandler.cpp  HookObserver.cpp  KeyboardEvent.cpp  KeyboardHook.cpp  KeyboardHookObserver.cpp  Keylogger.cpp  MouseEvent.cpp  MouseHook.cpp  MouseHookObserver.cpp  instantiate.cpp  main.cpp
model/network/: network.cpp
model/network_dll/: NetworkDLL.VC.VC.opendb
model/network_dll/Debug/: NetworkDLL.exp  NetworkDLL.lib
model/network_dll/NetworkDLL/: INetwork.h  IServer.h  ISession.h  Iclient.h  NetworkDLL.cpp  NetworkDLL.h  Packet.h  ReadMe.txt  client.cpp  client.h  clientManager.cpp  clientManager.h  packages.config  server.cpp  server.h  serverManager.cpp  serverManager.h  session.cpp  session.h  stdafx.cpp  stdafx.h
model/network_dll/NetworkDLL/Debug/NetworkDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NetworkDLL.lastbuildstate  NetworkDLL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
model/network_dll/ipch/NETWORKTESTER-4437a724/: NETWORKTESTER-9a4aecad.ipch
model/sayHello/: sayHello.cpp
model/workQueueManager/: CUMutex.cpp  CWMutex.cpp  workQueue.cpp  workQueueManager.cpp
(+14 files in other folders)
